--- a/src/main/resources/com/pasegados/labo/configuracion/TabConfiguracion.fxml
+++ b/src/main/resources/com/pasegados/labo/configuracion/TabConfiguracion.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -16,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane minHeight="691.0" minWidth="1276.0" prefHeight="691.0" prefWidth="1276.0" stylesheets="@../aspecto.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pasegados.labo.configuracion.TabConfiguracionControlador">
+<AnchorPane minHeight="691.0" minWidth="1276.0" prefHeight="691.0" prefWidth="1276.0" stylesheets="@../aspecto.css" xmlns="http://javafx.com/javafx/17.0.8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pasegados.labo.configuracion.TabConfiguracionControlador">
    <children>
       <GridPane layoutX="66.0" layoutY="33.0" prefHeight="618.0" prefWidth="828.0" styleClass="contenedores" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
         <columnConstraints>
@@ -396,12 +397,12 @@
                         <ColumnConstraints hgrow="NEVER" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" />
                      </columnConstraints>
                      <rowConstraints>
-                        <RowConstraints minHeight="40.0" prefHeight="60.0" vgrow="NEVER" />
-                        <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="45.0" prefHeight="55.0" vgrow="NEVER" />
+                        <RowConstraints minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="60.0" prefHeight="60.0" vgrow="ALWAYS" />
                      </rowConstraints>
                      <children>
                         <Label styleClass="labelEspecial" text="Base de Datos:" underline="true" GridPane.columnSpan="2147483647">
@@ -453,33 +454,57 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button fx:id="btCopiaSeguridad" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="32.0" text="2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                        <Button fx:id="btCopiaSeguridad" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#realizarCopia" prefHeight="32.0" prefWidth="32.0" text="2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                            <graphic>
-                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" translateX="-6.0" translateY="-1.0">
+                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" translateX="-7.0">
                                  <image>
-                                    <Image url="@editar.png" />
+                                    <Image url="@copiar.png" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button fx:id="btRestaurarCopia" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="32.0" text="2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                        <Button fx:id="btRestaurarCopia" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#restaurarCopia" prefHeight="32.0" prefWidth="32.0" text="2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                            <graphic>
-                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" translateX="-6.0" translateY="-1.0">
+                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" translateX="-7.0">
                                  <image>
-                                    <Image url="@editar.png" />
+                                    <Image url="@restaurar.png" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button fx:id="btBorrarManteniendo" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="32.0" text="2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+                        <Button fx:id="btBorrarManteniendo" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="32.0" text="2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
                            <graphic>
-                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" translateX="-6.0" translateY="-1.0">
+                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" translateX="-8.0" translateY="-1.0">
                                  <image>
-                                    <Image url="@editar.png" />
+                                    <Image url="@base.png" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </Button>
+                        <CheckBox mnemonicParsing="false" text="Patrones" GridPane.rowIndex="5" GridPane.valignment="TOP">
+                           <font>
+                              <Font size="11.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets left="40.0" top="5.0" />
+                           </GridPane.margin>
+                        </CheckBox>
+                        <CheckBox mnemonicParsing="false" text="Calibraciones" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+                           <font>
+                              <Font size="11.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets left="40.0" />
+                           </GridPane.margin>
+                        </CheckBox>
+                        <CheckBox mnemonicParsing="false" text="Ajustes" GridPane.rowIndex="5" GridPane.valignment="BOTTOM">
+                           <font>
+                              <Font size="11.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets bottom="5.0" left="40.0" />
+                           </GridPane.margin>
+                        </CheckBox>
                      </children>
                   </GridPane>
                   <GridPane maxHeight="270.0" minHeight="210.0" prefHeight="210.0" prefWidth="225.0" styleClass="contenedorSecundario" GridPane.valignment="TOP">
