--- a/src/main/resources/com/pasegados/labo/configuracion/TabConfiguracion.fxml
+++ b/src/main/resources/com/pasegados/labo/configuracion/TabConfiguracion.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -17,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane minHeight="691.0" minWidth="1276.0" prefHeight="691.0" prefWidth="1276.0" stylesheets="@../aspecto.css" xmlns="http://javafx.com/javafx/17.0.8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pasegados.labo.configuracion.TabConfiguracionControlador">
+<AnchorPane minHeight="691.0" minWidth="1276.0" prefHeight="691.0" prefWidth="1276.0" stylesheets="@../aspecto.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pasegados.labo.configuracion.TabConfiguracionControlador">
    <children>
       <GridPane layoutX="66.0" layoutY="33.0" prefHeight="618.0" prefWidth="828.0" styleClass="contenedores" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
         <columnConstraints>
@@ -54,7 +54,7 @@
                <children>
                   <Label styleClass="labelEspecial" text="Puerto Serie:" underline="true">
                      <font>
-                        <Font name="System Bold" size="13.0" />
+                        <Font name="System Bold" size="14.0" />
                      </font>
                      <GridPane.margin>
                         <Insets left="20.0" />
@@ -159,34 +159,34 @@
                         <Insets left="30.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField fx:id="tfPulsaciones" GridPane.columnIndex="1" GridPane.rowIndex="8">
+                  <TextField fx:id="tfPulsaciones" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="8">
                      <GridPane.margin>
-                        <Insets left="15.0" right="30.0" />
+                        <Insets left="20.0" right="30.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField fx:id="tfPreAcond" GridPane.columnIndex="1" GridPane.rowIndex="9">
+                  <TextField fx:id="tfPreAcond" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="9">
                      <GridPane.margin>
-                        <Insets left="15.0" right="30.0" />
+                        <Insets left="20.0" right="30.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField fx:id="tfAcond" GridPane.columnIndex="1" GridPane.rowIndex="10">
+                  <TextField fx:id="tfAcond" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="10">
                      <GridPane.margin>
-                        <Insets left="15.0" right="30.0" />
+                        <Insets left="20.0" right="30.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField fx:id="tfPreEnerg" GridPane.columnIndex="1" GridPane.rowIndex="11">
+                  <TextField fx:id="tfPreEnerg" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="11">
                      <GridPane.margin>
-                        <Insets left="15.0" right="30.0" />
+                        <Insets left="20.0" right="30.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField fx:id="tfEner" GridPane.columnIndex="1" GridPane.rowIndex="12">
+                  <TextField fx:id="tfEner" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="12">
                      <GridPane.margin>
-                        <Insets left="15.0" right="30.0" />
+                        <Insets left="20.0" right="30.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField fx:id="tfPreMed" GridPane.columnIndex="1" GridPane.rowIndex="13">
+                  <TextField fx:id="tfPreMed" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="13">
                      <GridPane.margin>
-                        <Insets left="15.0" right="30.0" />
+                        <Insets left="20.0" right="30.0" />
                      </GridPane.margin>
                   </TextField>
                   <Button fx:id="btReiniciar" mnemonicParsing="false" onAction="#cargaConfiguracion" styleClass="btnMini" text="Reiniciar" GridPane.halignment="LEFT" GridPane.rowIndex="14" GridPane.valignment="BOTTOM">
@@ -207,7 +207,7 @@
                   </Button>
                   <Label styleClass="labelEspecial" text="Otros parámetros:" underline="true" GridPane.rowIndex="7">
                      <font>
-                        <Font name="System Bold" size="13.0" />
+                        <Font name="System Bold" size="14.0" />
                      </font>
                      <padding>
                         <Insets left="20.0" />
@@ -402,12 +402,11 @@
                         <RowConstraints minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="60.0" prefHeight="60.0" vgrow="ALWAYS" />
                      </rowConstraints>
                      <children>
                         <Label styleClass="labelEspecial" text="Base de Datos:" underline="true" GridPane.columnSpan="2147483647">
                            <font>
-                              <Font name="System Bold" size="13.0" />
+                              <Font name="System Bold" size="14.0" />
                            </font>
                            <GridPane.margin>
                               <Insets left="20.0" />
@@ -418,31 +417,31 @@
                               <Tooltip text="Tiempo esperado entre el envio del equivalente a cada pulsación de teclado, en milisegundos" />
                            </tooltip>
                            <GridPane.margin>
-                              <Insets left="20.0" />
+                              <Insets left="30.0" />
                            </GridPane.margin>
                         </Label>
-                        <Label styleClass="labelInforme" text="Copia de Seguridad:" GridPane.rowIndex="2">
+                        <Label styleClass="labelInforme" text="Copia de Seguridad:" GridPane.rowIndex="3">
                            <tooltip>
                               <Tooltip text="Tiempo esperado entre el envio del equivalente a cada pulsación de teclado, en milisegundos" />
                            </tooltip>
                            <GridPane.margin>
-                              <Insets left="20.0" />
+                              <Insets left="30.0" />
                            </GridPane.margin>
                         </Label>
-                        <Label styleClass="labelInforme" text="Borrar, manteniendo:" GridPane.rowIndex="4">
+                        <Label styleClass="labelInforme" text="Borrar solo resultados:" GridPane.rowIndex="2">
                            <tooltip>
                               <Tooltip text="Tiempo esperado entre el envio del equivalente a cada pulsación de teclado, en milisegundos" />
                            </tooltip>
                            <GridPane.margin>
-                              <Insets left="20.0" />
+                              <Insets left="30.0" />
                            </GridPane.margin>
                         </Label>
-                        <Label styleClass="labelInforme" text="Restaurar con copia:" GridPane.rowIndex="3">
+                        <Label styleClass="labelInforme" text="Restaurar con copia:" GridPane.rowIndex="4">
                            <tooltip>
                               <Tooltip text="Tiempo esperado entre el envio del equivalente a cada pulsación de teclado, en milisegundos" />
                            </tooltip>
                            <GridPane.margin>
-                              <Insets left="20.0" />
+                              <Insets left="30.0" />
                            </GridPane.margin>
                         </Label>
                         <Button fx:id="btBorrarBBDD" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#borrarBBDD" prefHeight="32.0" prefWidth="32.0" text="2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
@@ -453,8 +452,11 @@
                                  </image>
                               </ImageView>
                            </graphic>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Button>
-                        <Button fx:id="btCopiaSeguridad" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#realizarCopia" prefHeight="32.0" prefWidth="32.0" text="2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                        <Button fx:id="btCopiaSeguridad" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#realizarCopia" prefHeight="32.0" prefWidth="32.0" text="2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                            <graphic>
                               <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" translateX="-7.0">
                                  <image>
@@ -462,8 +464,11 @@
                                  </image>
                               </ImageView>
                            </graphic>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Button>
-                        <Button fx:id="btRestaurarCopia" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#restaurarCopia" prefHeight="32.0" prefWidth="32.0" text="2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                        <Button fx:id="btRestaurarCopia" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#restaurarCopia" prefHeight="32.0" prefWidth="32.0" text="2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                            <graphic>
                               <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" translateX="-7.0">
                                  <image>
@@ -471,8 +476,11 @@
                                  </image>
                               </ImageView>
                            </graphic>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Button>
-                        <Button fx:id="btBorrarManteniendo" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="32.0" text="2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+                        <Button fx:id="btBorrarManteniendo" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="32.0" text="2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                            <graphic>
                               <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" translateX="-8.0" translateY="-1.0">
                                  <image>
@@ -480,31 +488,10 @@
                                  </image>
                               </ImageView>
                            </graphic>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Button>
-                        <CheckBox mnemonicParsing="false" text="Patrones" GridPane.rowIndex="5" GridPane.valignment="TOP">
-                           <font>
-                              <Font size="11.0" />
-                           </font>
-                           <GridPane.margin>
-                              <Insets left="40.0" top="5.0" />
-                           </GridPane.margin>
-                        </CheckBox>
-                        <CheckBox mnemonicParsing="false" text="Calibraciones" GridPane.rowIndex="5" GridPane.valignment="CENTER">
-                           <font>
-                              <Font size="11.0" />
-                           </font>
-                           <GridPane.margin>
-                              <Insets left="40.0" />
-                           </GridPane.margin>
-                        </CheckBox>
-                        <CheckBox mnemonicParsing="false" text="Ajustes" GridPane.rowIndex="5" GridPane.valignment="BOTTOM">
-                           <font>
-                              <Font size="11.0" />
-                           </font>
-                           <GridPane.margin>
-                              <Insets bottom="5.0" left="40.0" />
-                           </GridPane.margin>
-                        </CheckBox>
                      </children>
                   </GridPane>
                   <GridPane maxHeight="270.0" minHeight="210.0" prefHeight="210.0" prefWidth="225.0" styleClass="contenedorSecundario" GridPane.valignment="TOP">
@@ -519,7 +506,7 @@
                      <children>
                         <Label styleClass="labelEspecial" text="Ajustes del Equipo:" GridPane.columnSpan="2147483647">
                            <font>
-                              <Font name="System Bold" size="13.0" />
+                              <Font name="System Bold" size="14.0" />
                            </font>
                            <GridPane.margin>
                               <Insets left="20.0" />
@@ -541,6 +528,9 @@
                                  </image>
                               </ImageView>
                            </graphic>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Button>
                         <Button fx:id="btModificarAjsute" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#modificarAjuste" prefHeight="32.0" prefWidth="32.0" text="2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                            <GridPane.margin>
@@ -553,6 +543,9 @@
                                  </image>
                               </ImageView>
                            </graphic>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Button>
                         <Button fx:id="btEliminarAjsute" maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#eliminarAjuste" prefHeight="32.0" prefWidth="32.0" text="3" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
                            <GridPane.margin>
@@ -565,6 +558,9 @@
                                  </image>
                               </ImageView>
                            </graphic>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Button>
                      </children>
                   </GridPane>
